# ProjectWorkMugnaiLorenzo

./: CMakeLists.txt  Kernel.cpp  Kernel.h  README.md  ResizeImage.cpp  ResizeImage.h  ResizeImageParallel.cu  ResizeImageParallel.cuh  main.cu  times.csv
